# compush

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  Makefile  README.md  compush.py  gitlab_utils.py  main.py  pyproject.toml  regex.py  renderer.py  requirements.txt  setup.py
scripts/: upgrade.sh
src/compush/: main.py
template/: mr_erpc.md  mr_erpc.py  mr_template.py
