[project]
name = "compush"
version = "1.0.0"
description = "Git commit + push automation with branch management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.21.1",
    "rich>=14.2.0",
]

[project.scripts]
compush = "compush:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "ERA001", # eradicate
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
